Working on Security

--- a/SimpleSecuredApp/src/main/resources/static/css/home.css
+++ b/SimpleSecuredApp/src/main/resources/static/css/home.css
@@ -1,1 +1,10 @@
 @CHARSET "UTF-8";
+
+input[type=submit] {
+     background:none!important;
+     border:none;
+     padding:0!important;
+     color: blue;
+     text-decoration: underline;
+     cursor:pointer;
+}
