--- a/SimpleSecuredApp/src/main/resources/templates/home.html
+++ b/SimpleSecuredApp/src/main/resources/templates/home.html
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head lang="es">
+<html>
+<head lang="en">
 
-    <title>Simple Secured Application</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Spring Framework Guru</title>
 
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen" />
-
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
-            th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
-
-    <link href="../static/css/home.css"
-          th:href="@{css/home.css}" rel="stylesheet" media="screen"/>
+    <!--/*/ <th:block th:include="fragments/HeaderInclude :: head"></th:block> /*/-->
 </head>
 <body>
+
 <div class="container">
-    <div class="jumbotron">
-        <img src="../static/images/spring.png" width="200"
-             th:src="@{images/spring.png}"/>
-        <h1>Hello</h1>
-
-        <h2>Fellow Spring Framework Gurus!!!</h2>
-    </div>
+    <!--/*/ <th:block th:include="fragments/Header :: header"></th:block> /*/-->
 </div>
-
 </body>
 </html>
