--- a/SimpleSecuredApp/src/main/resources/templates/fragments/HeaderInclude.html
+++ b/SimpleSecuredApp/src/main/resources/templates/fragments/HeaderInclude.html
@@ -1,42 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <link rel="stylesheet" type="text/css" href="../static/css/home.css" />
-</head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen"/>
+
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+            th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+
+    <link href="../../static/css/home.css"
+          th:href="@{css/home.css}" rel="stylesheet" media="screen"/>
+</head>    
 <body>
-
-<div class="container">
-    <div th:fragment="header">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/usuarios}">Products</a></li>
-                        <li><a href="#" th:href="@{/usuario/new}" sec:authorize="hasRole('ROLE_ADMIN')">Nuevo Usuario</a></li>
-                        <li><a href="#" th:href="@{/login}">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="welcome">
-            <span sec:authorize="isAuthenticated()">Bienvenido <span sec:authentication="name"></span></span>
-        </div>
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Spring/Thymeleaf/Angular</h2>
-
-                    <h3>Simple Secured WebApp</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <img src="../../static/images/home.png" width="100"
-                     th:src="@{/images/home.png}"/>
-            </div>
-        </div>
-    </div>
-</div>
-
 </body>
 </html>
