--- a/SimpleSecuredApp/src/main/resources/templates/fragments/Header.html
+++ b/SimpleSecuredApp/src/main/resources/templates/fragments/Header.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head lang="en">
+<link rel="stylesheet" type="text/css" href="../static/css/home.css" />
+</head>
 <body>
 
-<div class="container">
-    <div th:fragment="header">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/usuarios}">Usuarios</a></li>
-                        <li><a href="#" th:href="@{/usuario/new}">Nuevo Usuario</a></li>
-                    </ul>
+	<div class="container">
+		<div th:fragment="header">
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+						<ul class="nav navbar-nav">
+							<li><a href="#" th:href="@{/usuarios}">Usuarios</a></li>
+							<li><a href="#" th:href="@{/usuario/new}"
+								sec:authorize="hasRole('ROLE_ADMIN')">Nuevo Usuario</a></li>
+							<li><a class="nav navbar-nav" href="#" th:href="@{/login}">Ingresar</a></li>
+						</ul>
 
-                </div>
-            </div>
-        </nav>
 
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Spring/Thymeleaf/Angular</h2>
+					</div>
+				</div>
+			</nav>
+			<div class="welcome">
+				<span sec:authorize="isAuthenticated()">Bienvenido <span
+					sec:authentication="name"></span></span>
+			</div>
+			<div class="jumbotron">
+				<div class="row text-center">
+					<div class="">
+						<h2>Spring/Thymeleaf/Angular</h2>
 
-                    <h3>Spring/Thymeleaf/Angular Simple Secured WebApp</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <img src="../../static/images/spring.png" width="100"
-                     th:src="@{/images/spring.png}"/>
-            </div>
-        </div>
-    </div>
-</div>
+						<h3>Spring/Thymeleaf/Angular Simple Secured WebApp</h3>
+					</div>
+				</div>
+				<div class="row text-center">
+					<img src="../../static/images/spring.png" width="100"
+						th:src="@{/images/spring.png}" />
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
